admissionsHomepage changes from main to each modules

--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageApply.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageApply.html
@@ -1,5 +1,5 @@
-<section class="admissionsHomepageApply">
-	<div class="container-fluid">	
+<section class="admissionsHomepage admissionsHomepageApply">
+	<div class="container-fluid">
 		<div class="row application-row">
 			<div class="col-xs-12 col-sm-12 col-md-4 application-outer-col">
 				<div class="row">
