--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageEAB.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageEAB.html
@@ -1,4 +1,4 @@
-<section class="admissionsHomepageEAB">
+<section class="admissionsHomepage admissionsHomepageEAB">
 	<div class="row eab-row">
 		<div class="col-xs-12 col-sm-6 col-md-6 eab-sizing" style="background: url('style-assets/media/admissions-redesign/eab.jpg') center center no-repeat; background-size: cover;">
 			<div class="eab-content">
@@ -27,7 +27,7 @@
 						<option value="#3">Link 3</option>
 					</select>
 				</div>
-				
+
 				<input type="button" class="eab-cta" name="link" onClick="location=document.jump.menu.options[document.jump.menu.selectedIndex].value;" value="GET STARTED">
 			</form>
 		</div>
