--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageSlider.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageSlider.html
@@ -1,8 +1,8 @@
 
-<section class="admissionsHomepageSlider" id="">
+<section class="admissionsHomepage admissionsHomepageSlider" id="">
 
 	<div id="admissions-carousel" class="carousel slide" data-ride="carousel">
-		
+
 		<div class="carousel-controls">
 			<a class="left-arrow" href="#admissions-carousel" role="button" data-slide="prev">
 				<span class="fa fa-2x fa-caret-left" aria-hidden="true"></span>
@@ -16,7 +16,7 @@
 				<span class="fa fa-2x fa-caret-right" aria-hidden="true"></span>
 			</a>
 		</div> <!-- carousel-controls END -->
-		
+
 		<!-- Wrapper for slides -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
@@ -40,17 +40,5 @@
 		</div>
 	</div> <!-- admissions carousel END -->
 
-	<div class="container carousel-cta">
-		<div class="row">
-			<div class="col-xs-12 col-sm-8 col-md-7 col-lg-7 details">
-				<h1>Admissions at MSU Denver</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				</p>
-			</div>
-			<div class="col-xs-12 col-sm-4 col-md-5 col-lg-5 text-center">
-				<button class="btn btn-lg btn-default hero-cta" aria-label="Event announcement">Contact Admissions</button>
-			</div>
-		</div>
-	</div>	
+
 </section>
