--- a/www-root/includes/admissionsHomepageIncludes/admissionsHomepagePanels.html
+++ b/www-root/includes/admissionsHomepageIncludes/admissionsHomepagePanels.html
@@ -1,4 +1,4 @@
-<section class="admissionsHomepagePanels">
+<section class="admissionsHomepage admissionsHomepagePanels">
 
 	<div class="row panel-row">
 		<a href="#">
