--- a/www-root/includes/admissionsHomepageIncludes/admissionsHomepageResources.html
+++ b/www-root/includes/admissionsHomepageIncludes/admissionsHomepageResources.html
@@ -1,4 +1,4 @@
-<section class="admissionsHomepageResources">
+<section class="admissionsHomepage admissionsHomepageResources">
 	<div class="container" style="padding-bottom: 10px;">
 		<div class="row">
 			<h2 class="fancy"><span>Resources</span></h2>
