--- a/development/terminalfour/src/sass/admissionsHomepage/homepage-panels.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/homepage-panels.scss
@@ -1,4 +1,4 @@
-section.admissionsHomepagePanels {
+.admissionsHomepagePanels {
 	.panel-row {
 		width: 100%;
 		margin-left: auto;
@@ -48,6 +48,6 @@ section.admissionsHomepagePanels {
 			word-spacing: 1px;
     		letter-spacing: 1px;
 		}
-		
+
 	}
 }
