--- a/development/terminalfour/src/sass/admissionsHomepage/homepage-resources.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/homepage-resources.scss
@@ -30,17 +30,19 @@ section.admissionsHomepageResources {
 		border-top: 15px solid $msu-red;
 		padding-bottom: 20px;
 		.resources-link {
-			color: white; 
-			font-size: 16px;
-			p {
-				margin: 0;
-				padding: 15px 0px;
-				border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+			padding: 15px;
+			margin: 5px 0;
+			border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+			transition: border-bottom 0.5s ease;
+			transition: background 0.5s ease;
+			a {
+				color: white;
+				font-size: 16px;
 				font-weight: 500;
-				transition: border-bottom 0.2s ease;
+				}
 				&:hover {
 					border-bottom: 2px solid rgba(255, 255, 255, 0.8);
-				}
+					background-color: rgba(136, 130, 130, 0.21);
 			}
 		}
 	}
