--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -11689,21 +11689,21 @@ section.admissionsHomepageApply a.application-link span.pointer {
   font-size: 14px;
 }
 
-section.admissionsHomepagePanels .panel-row {
+.admissionsHomepagePanels .panel-row {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 30px;
 }
-section.admissionsHomepagePanels .panel-sizing {
+.admissionsHomepagePanels .panel-sizing {
   height: 33.75vw;
 }
-section.admissionsHomepagePanels .panel-sizing:hover span {
+.admissionsHomepagePanels .panel-sizing:hover span {
   z-index: 10;
   color: #d11242;
   pointer-events: none;
 }
-section.admissionsHomepagePanels .overlay {
+.admissionsHomepagePanels .overlay {
   width: 100%;
   height: auto;
   margin: auto;
@@ -11717,14 +11717,14 @@ section.admissionsHomepagePanels .overlay {
   opacity: 0;
   transition: opacity 0.2s ease;
 }
-section.admissionsHomepagePanels .overlay:hover {
+.admissionsHomepagePanels .overlay:hover {
   opacity: 0.9;
 }
-section.admissionsHomepagePanels .overlay-content {
+.admissionsHomepagePanels .overlay-content {
   position: relative;
   top: 36%;
 }
-section.admissionsHomepagePanels .overlay-content p {
+.admissionsHomepagePanels .overlay-content p {
   font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 18px;
   text-transform: uppercase;
@@ -11856,18 +11856,20 @@ section.admissionsHomepageResources .resources-container {
   padding-bottom: 20px;
 }
 section.admissionsHomepageResources .resources-container .resources-link {
+  padding: 15px;
+  margin: 5px 0;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+  transition: border-bottom 0.5s ease;
+  transition: background 0.5s ease;
+}
+section.admissionsHomepageResources .resources-container .resources-link a {
   color: white;
   font-size: 16px;
-}
-section.admissionsHomepageResources .resources-container .resources-link p {
-  margin: 0;
-  padding: 15px 0px;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.1);
   font-weight: 500;
-  transition: border-bottom 0.2s ease;
 }
-section.admissionsHomepageResources .resources-container .resources-link p:hover {
+section.admissionsHomepageResources .resources-container .resources-link:hover {
   border-bottom: 2px solid rgba(255, 255, 255, 0.8);
+  background-color: rgba(136, 130, 130, 0.21);
 }
 
 /** Responsive Overrides **/
@@ -12381,9 +12383,9 @@ hr.pres-links {
 }
 
 .pres-button-interact {
-  display:  table-cell;
-  vertical-align:  middle;
-  text-align:  center;
+  display: ┬átable-cell;
+  vertical-align: ┬ámiddle;
+  text-align: ┬ácenter;
 }
 
 .president-page .form-group {
