--- a/www-root/includes/admissionsHomepageIncludes/admissionsHomepageSlider.html
+++ b/www-root/includes/admissionsHomepageIncludes/admissionsHomepageSlider.html
@@ -21,21 +21,51 @@
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
 			  <img src="style-assets/media/admissions-redesign/header-featured-story.png" alt="msudenver campus">
-				  <div class="carousel-caption">
-				    <!-- captions go here - which we will NOT be using  -->
-				  </div>
+				<div class="container carousel-cta">
+					<div class="row">
+						<div class="col-xs-12 col-sm-8 col-md-7 col-lg-7 details">
+							<h1>Admissions at MSU Denver</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							</p>
+						</div>
+						<div class="col-xs-12 col-sm-4 col-md-5 col-lg-5 text-center">
+							<button class="btn btn-lg btn-default hero-cta" aria-label="Event announcement">Contact Admissions</button>
+						</div>
+					</div>
+				</div>
 			</div> <!-- first slide END -->
 			<div class="item">
 			  <img src="style-assets/media/admissions-redesign/header-featured-story.png" alt="msudenver campus">
-				  <div class="carousel-caption">
-					<!-- captions go here - which we will NOT be using  -->
-				  </div>
+				<div class="container carousel-cta">
+					<div class="row">
+						<div class="col-xs-12 col-sm-8 col-md-7 col-lg-7 details">
+							<h1>Admissions at MSU Denver</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							</p>
+						</div>
+						<div class="col-xs-12 col-sm-4 col-md-5 col-lg-5 text-center">
+							<button class="btn btn-lg btn-default hero-cta" aria-label="Event announcement">Contact Admissions</button>
+						</div>
+					</div>
+				</div>
 			</div><!-- second slide END -->
 			<div class="item">
 			  <img src="style-assets/media/admissions-redesign/header-featured-story.png" alt="msudenver campus">
-				  <div class="carousel-caption">
-					<!-- captions go here - which we will NOT be using  -->
-				  </div>
+				<div class="container carousel-cta">
+					<div class="row">
+						<div class="col-xs-12 col-sm-8 col-md-7 col-lg-7 details">
+							<h1>Admissions at MSU Denver</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							</p>
+						</div>
+						<div class="col-xs-12 col-sm-4 col-md-5 col-lg-5 text-center">
+							<button class="btn btn-lg btn-default hero-cta" aria-label="Event announcement">Contact Admissions</button>
+						</div>
+					</div>
+				</div>
 			</div><!-- third slide END -->
 		</div>
 	</div> <!-- admissions carousel END -->
