updates carousel controls to aid with aligment

--- a/development/terminalfour/src/sass/admissionsHomepage/homepage-apply.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/homepage-apply.scss
@@ -1,4 +1,4 @@
-section.admissionsHomepageApply {
+.admissionsHomepageApply {
 	.application-outer-col {
 		padding-left: 5px;
 		padding-right: 5px;
