--- a/development/terminalfour/src/sass/admissionsHomepage/homepage-slider.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/homepage-slider.scss
@@ -27,7 +27,7 @@ section.admissionsHomepageSlider {
 	    left: unset;
 	    right: 5%;
 	    position: absolute;
-	    bottom: 25px;
+	    bottom: 30%;
 	    z-index: 15;
 	    margin-left: -30%;
 	    padding-left: 0;
