--- a/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
@@ -1,16 +1,25 @@
 @media only screen and (max-width: 1345px) {
-	section.admissionsHomepageApply {
+	.admissionsHomepageApply {
 		.application-cta {
 			height: 72px;
-		}	
+		}
+	}
+}
+
+@media only screen and (max-width: 1199px) {
+	.admissionsHomepageSlider {
+		.carousel-controls {
+			bottom: 40%;
+		}
 	}
 }
 
 @media only screen and (max-width: 991px) {
-	section.admissionsHomepageSlider {
+	.admissionsHomepageSlider {
 		.carousel-controls {
 			width: 35%;
 			right: 0%;
+			bottom: 60%;
 		}
 
 		.container.carousel-cta {
@@ -19,7 +28,7 @@
 		}
 	}
 
-	section.admissionsHomepageApply {
+	.admissionsHomepageApply {
 		.application-outer-col {
 			padding-bottom: 20px;
 			padding-left: 15px;
@@ -34,13 +43,17 @@
 		}
 	}
 
-	section.admissionsHomepagePanels {
+
+ 	.admissionsHomepagePanels {
+		.panel-sizing {
+				 height: 45vw;
+		 }
 		.overlay-content {
 			top: 28%;
 		}
 	}
 
-	section.admissionsHomepageEAB {
+	.admissionsHomepageEAB {
 		padding-bottom: 50px;
 
 		.eab-header {
@@ -71,7 +84,7 @@
 		}
 	}
 
-	section.admissionsHomepageResources {
+	.admissionsHomepageResources {
 		.resources-container {
 			.resources-link {
 				p {
@@ -89,7 +102,7 @@
 		.carousel-controls {
 			width: 100%;
 			right: 0%;
-			bottom: 0px;
+			bottom: 65%;
 		}
 
 		.hero-cta{
@@ -99,7 +112,7 @@
 
 	}
 
-	section.admissionsHomepageApply {
+	.admissionsHomepageApply {
 		.application-row {
 			padding-top: 10px;
 		}
@@ -115,7 +128,7 @@
 		}
 	}
 
-	section.admissionsHomepagePanels {
+	.admissionsHomepagePanels {
 		.panel-sizing {
 			height: 67.535vw;
 		}
@@ -158,9 +171,17 @@
 	}
 }
 
-/** specific breakpoint media query being used in Exceptional Case **/ 
+/** specific breakpoint media query being used in Exceptional Case **/
 @media only screen and (max-width: 385px) {
-	section.admissionsHomepagePanels {
+	section.admissionsHomepageSlider {
+		.carousel-controls {
+			width: 100%;
+			right: 0%;
+			bottom: 72%;
+		}
+}
+
+	.admissionsHomepagePanels {
 		.overlay-content {
 			top: 10%;
 		}
