adds style sectino for newsroom home pages tyles in main-style.scss. adds compiled html and css files. changes some of the includes on the newsroom.html page. creates newsroomNav.html component with some markup in the file

--- a/development/terminalfour/src/sass/main-style.scss
+++ b/development/terminalfour/src/sass/main-style.scss
@@ -67,6 +67,9 @@ header {
 /** Responsive Overrides **/
 @import "admissionsHomepage/responsive-overrides.scss";
 
+/** Newsroom Homepage Styles **/
+// styles go here
+
 
 /** President's page styles **/
 @import "msu-partials/president-site";
