adds compiled files. adds styles for nav bar. updates newsroomNav component with new classes. adds placehodler to banner section on main nav.

--- a/development/terminalfour/src/sass/main-style.scss
+++ b/development/terminalfour/src/sass/main-style.scss
@@ -68,7 +68,7 @@ header {
 @import "admissionsHomepage/responsive-overrides.scss";
 
 /** Newsroom Homepage Styles **/
-// styles go here
+@import "newsroomHomepage/newsroom-nav.scss";
 
 
 /** President's page styles **/
