--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -12015,6 +12015,27 @@ section.admissionsHomepageResources .resources-container .resources-link:hover {
 }
 .newsroomHomepage .newsroom-nav-container li a {
   color: #ffffff !important;
+  text-decoration: none;
+}
+.newsroomHomepage .newsroom-nav-container .underline-link {
+  position: relative;
+}
+.newsroomHomepage .newsroom-nav-container .underline-link:after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 5px;
+  display: block;
+  margin-top: 5px;
+  left: 0;
+  background: #fff;
+  transition: width .2s ease;
+  -webkit-transition: width .2s ease;
+}
+.newsroomHomepage .newsroom-nav-container .underline-link:hover:after {
+  width: 100%;
+  left: 0;
+  background: #fff;
 }
 
 /** President's page styles **/
