--- a/www-root/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -3,7 +3,7 @@
     <img src="http://via.placeholder.com/1920x375" alt="Insider Banner">
   </div>
   <nav class="navbar navbar-default">
-    <div class="newsroom-nav-container">
+    <div class="container-fluid newsroom-nav-container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
@@ -20,9 +20,9 @@
           
         </ul> -->
         <ul class="nav navbar-nav navbar-left">
-          <li><a href="#">Recent Stories</a></li>
-          <li><a href="#">All Stories</a></li>
-          <li><a href="#">Trending Topics</a></li>
+          <li><a href="#" class="underline-link">Recent Stories</a></li>
+          <li><a href="#" class="underline-link">All Stories</a></li>
+          <li><a href="#" class="underline-link">Trending Topics</a></li>
         </ul>
         <form class="navbar-form navbar-right">
           <div class="form-group">
