adds new insider-header-background.png asset. updates markup with asset. adds complied files.

--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -1,6 +1,6 @@
 <section class="newsroomHomepage">
   <div clas="top-banner">
-    <img src="http://via.placeholder.com/1920x375" alt="Insider Banner">
+    <img src="style-assets/media/newsroom-redesign/insider-header-background.png" alt="Insider Banner">
   </div>
   <nav class="navbar navbar-default">
     <div class="container-fluid newsroom-nav-container">
