--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
@@ -1,12 +1,14 @@
 .newsroomHomepage {
 	.newsroom-nav-container{
 		.collapse.navbar-collapse {
-			padding: 22px 0px;
+			padding: 30px 0px;
 		}
 		background-color: $msu-red;
 		li a {
 			color: #ffffff!important;
+			letter-spacing: 0.075em;
 			text-decoration: none;
+			text-transform: uppercase;
 		}
 		.underline-link{
 			position: relative;
@@ -29,6 +31,11 @@
 			width: 100%;
 			left: 0;
 			background: #fff;
+		}
+
+		.navbar-form {
+			margin-top: 0px;
+			margin-bottom: 0px;
 		}
 	}
 }
