adds changes to search box element. comments out primary demo for serach bar

--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
@@ -41,6 +41,13 @@
 		.navbar-form {
 			margin-top: 0px;
 			margin-bottom: 0px;
+			.form-control {
+				width: 100%;
+			}
+		}
+
+		.form-group {
+			width: 350px;
 		}
 	}
 }
