--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -12051,6 +12051,12 @@ section.admissionsHomepageResources .resources-container .resources-link:hover {
   margin-top: 0px;
   margin-bottom: 0px;
 }
+.newsroomHomepage .newsroom-nav-container .navbar-form .form-control {
+  width: 100%;
+}
+.newsroomHomepage .newsroom-nav-container .form-group {
+  width: 350px;
+}
 
 /** President's page styles **/
 body .president-page, p .president-page {
