--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
@@ -1,7 +1,12 @@
 .newsroomHomepage {
 	.newsroom-nav-container{
+		.navbar-left {
+			padding-top: 20px;
+			padding-bottom: 20px;
+		}
 		.collapse.navbar-collapse {
-			padding: 30px 0px;
+			padding: 0px 0px;
+			padding-bottom: 0px;
 		}
 		background-color: $msu-red;
 		li {
@@ -46,8 +51,39 @@
 			}
 		}
 
-		.form-group {
-			width: 350px;
+		.input-group {
+			width: 400px;
+			padding-top: 13px;
+			.input-group-btn {
+				left: -16px;
+				button.btn.btn-default {
+					height: 55px;
+					border-radius: 0px;
+					span {
+						color: $msu-blue;
+					}
+				}
+			}
 		}
+
+		.form-control {
+			height: 55px;
+			border: none;
+			border-radius: 0px;
+			&:focus {
+				border-color: inherit;
+				-webkit-box-shadow: none;
+				box-shadow: none;
+			}
+		}
+
+		input.form-control[type="text"] {
+			font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
+			font-size: 18px;
+			text-transform: uppercase;
+			letter-spacing: 0.075em;
+		}
+
+
 	}
 }
