--- a/www-root/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -30,9 +30,9 @@
           </div>
           <button type="submit" class="btn btn-default">Submit</button> -->
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for...">
+            <input type="text" class="form-control" placeholder="Search Insider News">
             <span class="input-group-btn">
-              <button class="btn btn-default" type="button">Go!</button>
+              <button class="btn btn-default" type="button"><span class="fa fa-search fa-2x"></span></button>
             </span>
           </div><!-- /input-group -->
         </form>
