create responsive overrides file for newsromeHomepage components. adds import statement to main=style.scss. adds compiled styles

--- a/development/terminalfour/src/sass/main-style.scss
+++ b/development/terminalfour/src/sass/main-style.scss
@@ -68,7 +68,11 @@ header {
 @import "admissionsHomepage/responsive-overrides.scss";
 
 /** Newsroom Homepage Styles **/
+
+/** Components **/
 @import "newsroomHomepage/newsroom-nav.scss";
+/** Responsive Overrides **/
+@import "newsroomHomepage/responsive-overrides.scss";
 
 
 /** President's page styles **/
