--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-style.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-style.scss
@@ -10,6 +10,9 @@
 /** Vendors **/
 @import "../../../../lib/bootstrap-sass/assets/stylesheets/bootstrap";
 
+/** General Elements **/
+@import "newsroom-elements.scss";
+
 /** Components **/
 @import "newsroom-nav.scss";
 
