adds fixes to markup. adds styling for top banner img elemetn in newsroom-nav.scss. updates meta tag to have a better definition on newsroom.html. updates nav styling and newsroom-elements styling. adds compiled files

--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -1,4 +1,4 @@
-<div clas="top-banner">
+<div class="top-banner">
   <img src="style-assets/media/newsroom-redesign/insider-header-background.png" alt="Insider Banner">
 </div>
 <nav class="navbar navbar-default">
