--- a/www-root/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -1,4 +1,4 @@
-<div clas="top-banner">
+<div class="top-banner">
   <img src="style-assets/media/newsroom-redesign/insider-header-background.png" alt="Insider Banner">
 </div>
 <nav class="navbar navbar-default">
