--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-style.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-style.scss
@@ -13,8 +13,12 @@
 /** General Elements **/
 @import "newsroom-elements.scss";
 
+/** Objects **/
+@import "object-container.scss";
+
 /** Components **/
 @import "newsroom-nav.scss";
+@import "newsroom-articles.scss";
 
 /** Responsive Overrides **/
 @import "responsive-overrides.scss";
