--- a/www-root/style-assets/css/newsroom-style.css
+++ b/www-root/style-assets/css/newsroom-style.css
@@ -7389,6 +7389,13 @@ body {
   font-weight: 400;
 }
 
+/** Objects **/
+.container-fluid {
+  width: 100%;
+  padding-left: 3.454545455%;
+  padding-right: 3.454545455%;
+}
+
 /** Components **/
 .top-banner img {
   width: 100%;
@@ -7401,7 +7408,6 @@ body {
 .newsroom-nav-container .navbar-left {
   padding-top: 22px;
   padding-bottom: 22px;
-  padding-left: 55px;
 }
 .newsroom-nav-container .collapse.navbar-collapse {
   padding: 0px 0px;
@@ -7443,10 +7449,10 @@ body {
   margin-bottom: 0px;
 }
 .newsroom-nav-container .navbar-form .form-control {
-  width: 100%;
+  width: 550px;
 }
 .newsroom-nav-container .input-group {
-  width: 685px;
+  width: auto;
   padding-top: 13px;
 }
 .newsroom-nav-container .input-group .input-group-btn {
