--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
@@ -8,7 +8,7 @@
 	.navbar-left {
 		padding-top: 22px;
 		padding-bottom: 22px;
-		padding-left: 55px;
+		// padding-left: 55px;
 	}
 	.collapse.navbar-collapse {
 		padding: 0px 0px;
@@ -53,12 +53,12 @@
 		margin-top: 0px;
 		margin-bottom: 0px;
 		.form-control {
-			width: 100%;
+			width: 550px;
 		}
 	}
 
 	.input-group {
-		width: 685px;
+		width: auto;
 		padding-top: 13px;
 		.input-group-btn {
 			left: 0px;
