--- a/www-root/includes/newsroomHomepageIncludes/newsroomHomepageHero.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomHomepageHero.html
@@ -1,5 +1,5 @@
 <div class="container">
 	<div class="row">
-		<h2>Hello World! (newsroom)</h2>
+		<h2>Newsroom Homepage Hero Goes here</h2>
 	</div>
 </div>
