--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-style.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-style.scss
@@ -18,6 +18,7 @@
 
 /** Components **/
 @import "newsroom-nav.scss";
+@import "newsroom-hero.scss";
 @import "newsroom-articles.scss";
 
 /** Responsive Overrides **/
