--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-hero.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-hero.scss
@@ -7,15 +7,38 @@
 		object-position: center center;
 	}
 	.container {
+		text-transform: uppercase;
+		color: #ffffff;
+		position: relative;
+		top: -154px;
 		.hero-tab {
+			letter-spacing: 0.15em;
+			background-color: rgba(0,0,0,0.8);
+			border-bottom: 8px solid #ffffff;
 			h3 {
-
+				font-size: 20px;
+				font-weight: 500;
+				padding: 20px 0px;
+				margin: 0px;
 			}
 			h2 {
-
+				font-size: 30px;
+				font-weight: 800;
+				margin: 0px;
 			}
 			h4 {
-
+				font-weight: 400;
+				font-size: 18px;
+				margin: 0px;
+				padding: 20px 0px;
+			}
+		}
+		.description-tab {
+			background-color: $msu-blue;
+			p {
+				padding: 40px 0px;
+				font-weight: 700;
+				margin-bottom: 0px;
 			}
 		}
 	}
