--- a/www-root/includes/newsroomHomepageIncludes/newsroomHomepageHero.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomHomepageHero.html
@@ -1,10 +1,19 @@
 <div class="homepage-hero">
 	<img src="style-assets/media/newsroom-redesign/bradleypayton-insider-0400-ms180208-cc.jpg" alt="Featured Story Image">
 	<div class="container">
-		<div class="hero-tab">
-			<h3>Featured Story</h3>
-			<h2>Description of the title above and some additional information The user might need.</h2>
-			<h4>Story: Doug McPherson / Photos: Mark Stahl</h4>
-		</div>	
+		<div class="row hero-tab">
+			<div class="col-md-12 text-center">
+				<h3>Featured Story</h3>
+				<h2>Overcoming Bullies</h2>
+				<h4>Story: Doug McPherson / Photos: Mark Stahl</h4>
+			</div>
+		</div>
+		<div class="row description-tab">
+			<div class="col-md-12 text-center">
+				<p>
+					Student overcomes years of harassment, finds community at MSU Denver and shares a powerful message of hope.
+				</p>
+			</div>
+		</div>
 	</div>
 </div>
