adds negative margin to the hero tab container element to cancel out white space created by positioning things relatively. adds compiled style file.

--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-hero.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-hero.scss
@@ -11,6 +11,8 @@
 		color: #ffffff;
 		position: relative;
 		top: -154px;
+		// negative margin cancels out the whitespace from relative positioning
+		margin-bottom: -154px;
 		.hero-tab {
 			letter-spacing: 0.15em;
 			background-color: rgba(0,0,0,0.8);
