--- a/www-root/style-assets/css/newsroom-style.css
+++ b/www-root/style-assets/css/newsroom-style.css
@@ -7531,6 +7531,35 @@ nav.navbar {
   margin-bottom: 0px;
 }
 
+.container-fluid.article-container {
+  margin-top: 60px;
+}
+.container-fluid.article-container .row img {
+  width: 100%;
+  height: 100%;
+  max-height: 450px;
+  object-fit: cover;
+  object-position: center center;
+}
+.container-fluid.article-container .row h4 {
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.15em;
+  padding-top: 35px;
+}
+.container-fluid.article-container .row h3 {
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: none;
+  color: #00447C;
+}
+.container-fluid.article-container .row p {
+  font-size: 22px;
+  font-weight: 500;
+  letter-spacing: none;
+}
+
 /** Responsive Overrides **/
 /** specific breakpoint media query being used in Exceptional Case **/
 
