--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomArticles.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomArticles.html
@@ -1,24 +1,47 @@
 <div class="container-fluid article-container">
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<div class="col-xs-12 col-sm-6 col-md-4">
+			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
 				<img src="http://via.placeholder.com/580x450" alt="Article Image">
 				<h4>Category</h4>
 				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
 				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
 			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
+			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
 				<img src="http://via.placeholder.com/580x450" alt="Article Image">
 				<h4>Category</h4>
 				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
 				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
 			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
+			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
 				<img src="http://via.placeholder.com/580x450" alt="Article Image">
 				<h4>Category</h4>
 				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
 				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
 			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
+				<img src="http://via.placeholder.com/580x450" alt="Article Image">
+				<h4>Category</h4>
+				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
+				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
+				<img src="http://via.placeholder.com/580x450" alt="Article Image">
+				<h4>Category</h4>
+				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
+				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
+				<img src="http://via.placeholder.com/580x450" alt="Article Image">
+				<h4>Category</h4>
+				<h3><a href="#">Double-check your paycheck with the new tax law</a></h3>
+				<p>Tax Day for 2017 is still a few months away, but you can make sure you're prepared to do your 2018 taxes right now.</p>
+			</div>
+		</div>
+	</div>
+	<div class="row text-center">
+		<div clas="col-md-4">
+			<button class="btn btn-lg btn-default">Read More Stories</button>
 		</div>
 	</div>
 </div>
