--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
@@ -1,32 +1,45 @@
 .container-fluid {
 	&.article-container {
-		margin-top: 60px;
+		margin-top: 15px;
 		.row {
-			img {
-				width: 100%;
-			    height: 100%;
-			    max-height: 450px;
-			    object-fit: cover;
-			    object-position: center center;
+			.article-item {
+				padding-top: 45px;
+				padding-bottom: 45px;
+				img {
+					width: 100%;
+				    height: 100%;
+				    max-height: 450px;
+				    object-fit: cover;
+				    object-position: center center;
+				}
+				h4 {
+			    	font-size:18px;
+			    	font-weight: 400;
+			    	text-transform: uppercase;
+			    	letter-spacing: 0.15em;
+			    	padding-top: 35px;
+			    }
+			    h3 {
+			    	font-size: 30px;
+			    	font-weight: 700;
+			    	letter-spacing: none;
+			    	color: #00447C;
+			    }
+			    p {
+			    	font-size: 22px;
+			    	font-weight: 500;
+			    	letter-spacing: none;
+		    	}
 			}
-			h4 {
-		    	font-size:18px;
-		    	font-weight: 400;
-		    	text-transform: uppercase;
-		    	letter-spacing: 0.15em;
-		    	padding-top: 35px;
-		    }
-		    h3 {
-		    	font-size: 30px;
-		    	font-weight: 700;
-		    	letter-spacing: none;
-		    	color: #00447C;
-		    }
-		    p {
-		    	font-size: 22px;
-		    	font-weight: 500;
-		    	letter-spacing: none;
-		    }
+			button {
+				font-size: 20px;
+				padding: 20px 16px;
+		        background: $msu-red;
+		        color: #ffffff;
+		        max-width: 310px;
+		        font-weight: 800;
+		        border-radius: 0px;
+			}
 		}
 	}
 }
