--- a/www-root/style-assets/css/newsroom-style.css
+++ b/www-root/style-assets/css/newsroom-style.css
@@ -7396,6 +7396,12 @@ body {
   padding-right: 3.454545455%;
 }
 
+button {
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  width: 100%;
+}
+
 /** Components **/
 .top-banner img {
   width: 100%;
@@ -7532,32 +7538,45 @@ nav.navbar {
 }
 
 .container-fluid.article-container {
-  margin-top: 60px;
+  margin-top: 15px;
 }
-.container-fluid.article-container .row img {
+.container-fluid.article-container .row .article-item {
+  padding-top: 45px;
+  padding-bottom: 45px;
+}
+.container-fluid.article-container .row .article-item img {
   width: 100%;
   height: 100%;
   max-height: 450px;
   object-fit: cover;
   object-position: center center;
 }
-.container-fluid.article-container .row h4 {
+.container-fluid.article-container .row .article-item h4 {
   font-size: 18px;
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 0.15em;
   padding-top: 35px;
 }
-.container-fluid.article-container .row h3 {
+.container-fluid.article-container .row .article-item h3 {
   font-size: 30px;
   font-weight: 700;
   letter-spacing: none;
   color: #00447C;
 }
-.container-fluid.article-container .row p {
+.container-fluid.article-container .row .article-item p {
   font-size: 22px;
   font-weight: 500;
   letter-spacing: none;
+}
+.container-fluid.article-container .row button {
+  font-size: 20px;
+  padding: 20px 16px;
+  background: #d11242;
+  color: #ffffff;
+  max-width: 310px;
+  font-weight: 800;
+  border-radius: 0px;
 }
 
 /** Responsive Overrides **/
