--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
@@ -34,6 +34,7 @@
 			button {
 				font-size: 20px;
 				padding: 20px 16px;
+				margin-top: 20px;
 		        background: $msu-red;
 		        color: #ffffff;
 		        max-width: 310px;
