--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
@@ -37,6 +37,7 @@
 				margin-top: 20px;
 		        background: $msu-red;
 		        color: #ffffff;
+		        width: 100%;
 		        max-width: 310px;
 		        font-weight: 800;
 		        border-radius: 0px;
