--- a/www-root/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -11,6 +11,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <a href="#" class="navbar-brand">
+        <img src="style-assets/media/newsroom-redesign/msu-denver-logo-wide.svg" alt="Newsroom Logo" width="140px">
+      </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
